2011-08-20  Robert Larice
 * src/spicelib/devices/adms/admst/*.xml :
   #6/7 use a subdirectory "ngspice" for includes to create a uniq namespace
     adms-2

2011-08-20  Robert Larice
 * src/xspice/cmpp/pp_mod.c ,
 * src/xspice/cmpp/writ_ifs.c :
   #5/7 use a subdirectory "ngspice" for includes to create a uniq namespace
     xspice

2011-08-20  Robert Larice
 * visualc/vngspice.vcproj :
   #4/7 use a subdirectory "ngspice" for includes to create a uniq namespace

2011-08-20  Robert Larice
 * configure.ac ,
 * src/Makefile.am :
   #3/7 use a subdirectory "ngspice" for includes to create a uniq namespace

2011-08-20  Robert Larice
 * src/include/* :
   #2/7 use a subdirectory "ngspice" for includes to create a uniq namespace
     move the include files down into the new directory

2011-08-20  Robert Larice
 * **/* :
   #1/7 use a subdirectory "ngspice" for includes to create a uniq namespace

2011-08-20  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
   update bison generated files

2011-08-20  Robert Larice
 * src/frontend/parse-bison.y :
   the i() and v() function application have special semantics

2011-08-20  Robert Larice
 * src/maths/fft/Makefile.am ,
 * visualc/vngspice.vcproj :
   remove maths/fft/fftext.h

2011-08-19  Holger Vogt
 * rawfile.c: code beautified, 'strange line' error improved
 * maths/fft/fftext.h removed
 * include/fftext.h, 1-f-code.c, 1-f-code.h, com_fft.c:
   type float --> double
 * control.c: code beautified

2011-08-14  Robert Larice
 * src/frontend/postsc.c :
   postsc.c, swallow warnings

2011-08-14  Paolo Nenzi
 * src/frontend/devices.c :
   devhelp now prints header when user asks for a single
   parameter.

2011-08-13  Robert Larice
 * src/ciderlib/twod/twoprint.c :
   twoprint.c, swallow warnings

2011-08-13  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :