@@ -1,4 +1,9 @@
 2011-08-20  Robert Larice
+ * src/spicelib/devices/adms/admst/ngspice.xml :
+   #7/7 use a subdirectory "ngspice" for includes to create a uniq namespace
+     adms-3
+
+2011-08-20  Robert Larice
  * src/spicelib/devices/adms/admst/*.xml :
    #6/7 use a subdirectory "ngspice" for includes to create a uniq namespace
      adms-2
